# DeepResearchAgent

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  agent-streaming.md  agent_flow.md  architecture.md  context-engineering-guide.md  docker-compose.yml  example-stream.md  macro-prompts.md  prd.md  test.md  todo.md  todos.md  ui-guardrails.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  cli.py  main.py  process_inflation_data.py  pyproject.toml
backend/agents/: __init__.py  artifact_fact_consistency.py  chat_surface_tool.py  data_engineer.py  data_toolbox.py  fmp_mcp_client.py  graph_input.py  intake.py  orchestrator.py  quality_analyst.py  quantitative_developer.py  report_artifacts.py  request_research_approval_tool.py  requested_coverage.py  scenario_projection_contract.py  subagent_tool_guard.py  subagents_registry.py  technical_writer.py  tool_utils.py
backend/agents/data_engineer/: __init__.py  factory.py  mcp_wrappers.py  paths.py  prompts.py  provider_retry.py  storage.py  tools.py
backend/agents/intake/: __init__.py  heuristics.py  nodes.py  prompts.py  schema.py
backend/agents/orchestrator/: __init__.py  api.py  common.py  factory.py  middleware.py  nodes.py  prompts.py  qa_recovery.py  state.py  toolbox_router.py
backend/agents/quality_analyst/: __init__.py  fidelity.py  prompts.py  subagent.py  tools.py  utils.py
backend/agents/quant_macro_stats/: README.md  __init__.py  _utils.py  alignment.py  catalog.py  charts.py  consumer_stress.py  correlations.py  forecasting.py  historical_replay.py  inflation_policy.py  macro_cycle.py  method_ids.py  normalization.py  outputs.py  recession_dashboard.py  scenarios.py  share_count_diagnostics.py  shared.py  unemployment_forecast.py
backend/agents/quantitative_developer/: __init__.py  constants.py  handoff.py  prompts.py  (+6 more)
backend/alembic/: env.py
backend/api/: __init__.py  app.py  dependencies.py
backend/core/: config.py  context.py  database.py  lifespan.py  logging_config.py  paths.py  report_schema.py
backend/improver-ca4c9038/: execution_summary.json
backend/mcp_clients/: __init__.py  bea_client.py  bls_client.py  census_client.py  fmp_mcp_client.py  fred_mcp_client.py  market_data_provider.py  provider_payload.py  sec_edgar_client.py  sec_edgar_contract.py  worldbank_client.py
backend/sandbox/: Dockerfile  runner.py
backend/services/: __init__.py  job_status.py  report_library.py  research_jobs.py  research_types.py  stream_errors.py  stream_events.py
backend/tests/: runner.py  test_auth_reports.py  test_bea_client.py  test_bls_client.py  test_census_client.py  test_data_engineer_bea_tool.py  test_data_engineer_bls_tool.py  test_data_engineer_census_tool.py  test_data_engineer_factory.py  test_data_engineer_market_tool.py  test_data_engineer_mcp_spill.py  test_data_engineer_mcp_wrappers.py  test_data_engineer_prompt_guardrails.py  test_data_engineer_storage.py  test_data_engineer_worldbank_tool.py  test_fred_mcp_client.py  test_graph_input.py  test_improver_tracing.py  test_intake_message_cleaning.py  test_market_data_provider.py  test_orchestrator_intake_routing.py  test_orchestrator_middleware.py  test_orchestrator_skill_guardrails.py  test_quality_analyst_subagent.py  test_quant_developer_prompt_guardrails.py  test_quant_macro_stats.py  test_regression_benchmarks.py  test_report_chart_audit.py  test_runner_watchdog.py  test_sec_edgar_client.py  test_secret_guardrails.py  test_stream_errors.py  test_technical_writer_chart_normalization.py  test_technical_writer_flow_boundaries.py  test_technical_writer_prompt_guardrails.py  test_toolbox_router.py  test_worldbank_client.py
(+241 files in other folders)
