[project]
name = "deep-research-agent-backend"
version = "0.1.0"
description = "Asynchronous Deep Financial Research Agent Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "langgraph>=0.2.53",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "langchain-google-genai>=2.0.6",
    "openai>=1.58.1",
    "pandas>=2.2.3",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    "requests>=2.32.3",
    "aiohttp>=3.11.11",
    "python-jose[cryptography]>=3.3.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-tasks>=2.18.0",
    "google-cloud-secret-manager>=2.21.1",
    "docker>=7.1.0",
    "mcp>=1.1.0",
    "httpx-sse>=0.4.0",
    "langchain-mcp-adapters>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "services", "sandbox"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
